* New Features *

  - ST_DelaunayTriangles (Sandro Santilli / Vizzuality)
  - ST_NearestValue, ST_Neighborhood (Bborie Park / UC Davis)
  - ST_PixelAsPoint, ST_PixelAsPoints (Bborie Park / UC Davis)
  - ST_PixelAsCentroid, ST_PixelAsCentroids (Bborie Park / UC Davis)
  - ST_Raster2WorldCoord, ST_World2RasterCoord (Bborie Park / UC Davis)
  - Additional raster/raster spatial relationship functions
    (ST_Overlaps, ST_Touches, ST_Contains, ST_ContainsProperly, ST_Within)
    (Bborie Park / UC Davis)
  - #1643, Tiger Geocoder - Tiger 2011 loader (Regina Obe / Paragon Corporation) 
    Funded by Hunter Systems Group
  - GEOMETRYCOLLECTION support for ST_MakeValid (Sandro Santilli / Vizzuality)
  - ST_PixelOfValue (Bborie Park / UC Davis)

* Enhancements *
  - #823, tiger geocoder: Make loader_generate_script download portion less greedy
  - #1719, Add support for Point and GeometryCollection ST_MakeValid inputs
  - #1796, Big performance boost for distance calculations in geography
  - #1802, improved function interruptibility.
  - #1856, tiger geocoder: reverse geocoder rating setting for prefer numbered highway name
  - #1661, Add aggregate variant of ST_SameAlignment

* Fixes *

  - #1839, handling of subdatasets in GeoTIFF in raster2pgsql.
  - #1840, fix logic of when to compute # of tiles in raster2pgsql.
  - #1870, align the docs and actual behavior of raster's ST_Intersects
  - #1872, fix ST_ApproxSummarystats to prevent division by zero
  - #1875, ST_SummaryStats returns NULL for all parameters except count
	         when count is zero

PostGIS 2.0.1
2012/06/22

* Bug Fixes *

  - #1264, fix st_dwithin(geog, geog, 0). 
  - #1468  shp2pgsql-gui table column schema get shifted
  - #1694, fix building with clang. (vince)
  - #1708, improve restore of pre-PostGIS 2.0 backups.
  - #1714, more robust handling of high topology tolerance.
  - #1755, ST_GeographyFromText support for higher dimensions.
  - #1759, loading transformed shapefiles in raster enabled db.